<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<resources>
    <string name="app_name">SSFM</string>

    <string name="menu_charts">Charts</string>
    <string name="menu_home">Home</string>
    <string name="menu_my_favorite">My Favorite</string>
    <string name="menu_my_playlist">My Playlist</string>
    <string name="menu_login">Login</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_search">Search</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_switch_button">Menu Button</string>

    <string name="todo">TODO</string>

    <string name="rv_title_popular">Popular</string>
    <string name="rv_title_new_tracks">New Songs</string>
    <string name="rv_title_rank_genres">Rank Genres</string>
    <string name="tv_title_rank_artists">Rank Artists</string>

    <string name="transition_image">transition_image</string>
</resources>
