<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bkg_menu_fog"
    android:orientation="vertical">

    <include
        android:id="@+id/include_toolbar"
        layout="@layout/part_toolbar_menu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/tv_menu_home"
        style="@style/Menu.Items"
        android:layout_below="@+id/include_toolbar"
        android:drawableLeft="@drawable/ic_sound_bars_pulse"
        android:text="@string/menu_home"
        app:layout_constraintVertical_chainStyle="packed"/>

    <TextView
        android:id="@+id/tv_menu_playlist"
        style="@style/Menu.Items"
        android:layout_below="@+id/tv_menu_home"
        android:drawableLeft="@drawable/ic_music"
        android:text="@string/menu_my_playlist"/>

    <TextView
        android:id="@+id/tv_menu_favorite"
        style="@style/Menu.Items"
        android:layout_below="@+id/tv_menu_playlist"
        android:drawableLeft="@drawable/ic_favorite"
        android:text="@string/menu_my_favorite"/>

    <TextView
        android:id="@+id/tv_menu_search"
        style="@style/Menu.Items"
        android:layout_below="@+id/tv_menu_favorite"
        android:drawableLeft="@drawable/ic_search"
        android:text="@string/menu_search"/>

    <TextView
        android:id="@+id/tv_menu_chart"
        style="@style/Menu.Items"
        android:layout_below="@+id/tv_menu_search"
        android:drawableLeft="@drawable/ic_chart"
        android:text="@string/menu_charts"/>

    <TextView
        android:id="@+id/tv_menu_setting"
        style="@style/Menu.Items"
        android:layout_below="@+id/tv_menu_chart"
        android:drawableLeft="@drawable/ic_settings"
        android:text="@string/menu_settings"/>

    <TextView
        android:id="@+id/tv_menu_login"
        style="@style/Menu.Items"
        android:layout_below="@+id/tv_menu_setting"
        android:layout_marginTop="30dp"
        android:drawableLeft="@drawable/ic_user"
        android:text="@string/menu_login"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:layout_below="@id/tv_menu_login"/>
</RelativeLayout>