<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bkg_menu_fog"
    android:orientation="vertical">

    <include
        android:id="@+id/include_toolbar"
        layout="@layout/part_toolbar_menu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/tv_menu_home"
        style="@style/Menu.Items"
        android:drawableLeft="@drawable/ic_sound_bars_pulse"
        android:text="@string/menu_home"
        app:layout_constraintBottom_toTopOf="@+id/tv_menu_playlist"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include_toolbar"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintVertical_chainStyle="packed"/>

    <TextView
        android:id="@+id/tv_menu_playlist"
        style="@style/Menu.Items"
        android:drawableLeft="@drawable/ic_music"
        android:text="@string/menu_my_playlist"
        app:layout_constraintBottom_toTopOf="@+id/tv_menu_favorite"
        app:layout_constraintStart_toStartOf="@+id/tv_menu_home"
        app:layout_constraintTop_toBottomOf="@+id/tv_menu_home"
        app:layout_constraintVertical_chainStyle="packed"/>

    <TextView
        android:id="@+id/tv_menu_favorite"
        style="@style/Menu.Items"
        android:drawableLeft="@drawable/ic_favorite"
        android:text="@string/menu_my_favorite"
        app:layout_constraintBottom_toTopOf="@+id/tv_menu_search"
        app:layout_constraintStart_toStartOf="@+id/tv_menu_playlist"
        app:layout_constraintTop_toBottomOf="@+id/tv_menu_playlist"/>

    <TextView
        android:id="@+id/tv_menu_search"
        style="@style/Menu.Items"
        android:drawableLeft="@drawable/ic_search"
        android:text="@string/menu_search"
        app:layout_constraintBottom_toTopOf="@+id/tv_menu_chart"
        app:layout_constraintStart_toStartOf="@+id/tv_menu_favorite"
        app:layout_constraintTop_toBottomOf="@+id/tv_menu_favorite"/>

    <TextView
        android:id="@+id/tv_menu_chart"
        style="@style/Menu.Items"
        android:drawableLeft="@drawable/ic_chart"
        android:text="@string/menu_charts"
        app:layout_constraintBottom_toTopOf="@+id/tv_menu_setting"
        app:layout_constraintStart_toStartOf="@+id/tv_menu_search"
        app:layout_constraintTop_toBottomOf="@+id/tv_menu_search"/>

    <TextView
        android:id="@+id/tv_menu_setting"
        style="@style/Menu.Items"
        android:drawableLeft="@drawable/ic_settings"
        android:text="@string/menu_settings"
        app:layout_constraintBottom_toTopOf="@+id/tv_menu_login"
        app:layout_constraintStart_toStartOf="@+id/tv_menu_chart"
        app:layout_constraintTop_toBottomOf="@+id/tv_menu_chart"/>

    <TextView
        android:id="@+id/tv_menu_login"
        style="@style/Menu.Items"
        android:drawableLeft="@drawable/ic_user"
        android:text="@string/menu_login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/tv_menu_setting"
        app:layout_constraintTop_toBottomOf="@+id/tv_menu_setting"/>
</android.support.constraint.ConstraintLayout>